# DeepPushRecovery

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  Window.cpp  Window.h  main.cpp
core/: BVH.cpp  BVH.h  CMakeLists.txt  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Muscle.cpp  SimpleEnvironment.cpp  SimpleEnvironment.h
core/python/: BvhGenerator.py
data/: ground_app.xml  human.xml  human_capture.xml  metadata_human.txt
data/human_data/: human-data.csv
data/metadata/: muscle_100x_push_both_sf_crouch0_uniform.txt  muscle_100x_push_both_sf_crouch20_uniform.txt  muscle_100x_push_both_sf_crouch30_uniform.txt  muscle_100x_push_both_sf_crouch60_uniform.txt  muscle_15x_nopush_sf_all_adaptive.txt  muscle_15x_nopush_sf_all_uniform.txt  muscle_15x_nopush_sf_crouch0_adaptive.txt  muscle_15x_nopush_sf_crouch0_uniform.txt  muscle_15x_nopush_sf_crouch20_adaptive.txt  muscle_15x_nopush_sf_crouch20_uniform.txt  muscle_15x_nopush_sf_crouch30_adaptive.txt  muscle_15x_nopush_sf_crouch30_uniform.txt  muscle_15x_nopush_sf_crouch60_adaptive.txt  muscle_15x_nopush_sf_crouch60_uniform.txt  muscle_15x_push_both_sf_all_adaptive.txt  muscle_15x_push_both_sf_all_uniform.txt  muscle_15x_push_both_sf_crouch0_adaptive.txt  muscle_15x_push_both_sf_crouch0_uniform.txt  muscle_15x_push_both_sf_crouch20_adaptive.txt  muscle_15x_push_both_sf_crouch20_uniform.txt  muscle_15x_push_both_sf_crouch30_adaptive.txt  muscle_15x_push_both_sf_crouch30_uniform.txt  muscle_15x_push_both_sf_crouch60_adaptive.txt  muscle_15x_push_both_sf_crouch60_uniform.txt  muscle_15x_push_left_sf_all_adaptive.txt  muscle_15x_push_left_sf_all_uniform.txt  muscle_15x_push_mean_var_sf_all_mean_var_adaptive.txt  muscle_15x_push_mean_var_sf_all_mean_var_uniform.txt  muscle_20x_push_both_sf_crouch60_uniform.txt  (+126 more)
push_exp/: CMakeLists.txt  PushSim.cpp  PushSim.h  PushWindow.cpp  PushWindow.h  PushWindowDraw.cpp  main.cpp  main_CrouchSimulation.py  main_CrouchSimulationForCOT.py  main_CrouchSimulation_bvhgenerator.py  main_CrouchSimulation_for_baseline.py  main_CrouchSimulation_for_footstep.py  main_CrouchSimulation_from_human_data.py  main_PrintBvh.py  main_crouch_foot_placement.py  pushsim.py  pypushexp.cpp  render.py  result_concate.py
python/: CMakeLists.txt  EnvManager.cpp  EnvManager.h  EnvWrapper.cpp  EnvWrapper.h  Model.py  Model_depth3.py  Model_depth4.py  Model_depth5.py  PPO.py  PPO_depth3.py  PPO_depth3_mp.py  PPO_depth4_mp.py  PPO_depth5_mp.py  pymss.cpp  run_PPO.sh  run_push_trial.sh  run_setting.sh
render/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
(+688 files in other folders)
